# caselaw-downloader

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  lefthook.yml  pyproject.toml  pytest-precommit.ini  sonar-project.properties
.github/workflows/: ai-review.yml  ci.yml
scripts/: ai_review.py
src/caselaw_downloader/: __init__.py  api.py  cli.py  downloader.py
tests/: test_api.py  test_cli.py  test_downloader.py
