[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caselaw-downloader"
version = "0.1.0"
description = "Download UK case law from The National Archives Find Case Law service"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "ggshield",
    "pyyaml>=6.0.0",
    "pip-audit",
]

[project.scripts]
caselaw-downloader = "caselaw_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.black]
line-length = 99
target-version = ["py39"]
